Correct tableEditor and css

--- a/css/main.css
+++ b/css/main.css
@@ -371,7 +371,7 @@ footer .right {
   color: #f6f7c3;
 }
 .table {
-  width: 70%;
+  width: 100%;
   border-collapse: collapse;
   border-spacing: 3;
   margin-bottom: 3%;
