--- a/css/tableEditor.css
+++ b/css/tableEditor.css
@@ -1,6 +1,10 @@
 body {
   font: 14px Arial, Helvetica, sans-serif;
-  background-color: rgb(138, 115, 85);
+  background-color: rgb(204, 220, 224);
+  width: 100%;
+}
+#welcome {
+  color: white;
 }
 tr form {
   display: flex;
